Improvements:
- CMake build now uses the highest compiler warning/error setting

Bugfixes:
- Fixed some bugs exposed by heightened compiler warnings