@@ -1,22 +1,0 @@
-dist: bionic
-language: cpp
-
-addons:
-  apt:
-    update: true
-
-before_install:
-  - sudo apt-get remove cmake
-  - sudo apt-get update
-  - sudo apt-get install apt-transport-https ca-certificates gnupg software-properties-common wget
-  - wget -qO - https://apt.kitware.com/keys/kitware-archive-latest.asc | sudo apt-key add -
-  - sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main'
-  - sudo apt-get update
-  - sudo apt-get install -y cmake swig doxygen
-
-script:
-  - mkdir build
-  - cd build
-  - /usr/bin/cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DBUILD_TESTS=1 ..
-  - /usr/bin/cmake --build .
-  - /usr/bin/ctest -C RelWithDebInfo
